UPDATED PARALLEX SITE:

--- a/parallex site/parallex.html
+++ b/parallex site/parallex.html
@@ -14,6 +14,11 @@
             <span class="border">
                 Beautiful india
             </span>
+            <ul >
+                <li class="nav"> <a href="#">Explore</a></li>
+                <li class="nav"><a href="ContactUs.html">Contact Us</a></li>
+                <li class="nav"><a href="AboutUs.html">About Us</a></li>
+            </ul>
         </div>
     </div>
 
@@ -79,6 +84,31 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit illum delectus placeat porro corporis ut suscipit repellendus a excepturi non provident? Aliquam dolorum dolores molestias praesentium qui animi nihil.</p>
         <a href="example.com">Click Here To Read More</a>
     </section>
+
+
+    <div class="footer">
+        <h2>
+            Beautiful India
+        </h2>
+
+        <ul class="footerlists">
+            <li><h2> Contact Us</h2></li>
+            <li>Email: </li>
+            <li>Call: </li>
+        </ul>
+
+        <ul class="footerlists">
+            <li><h2> Socials</h2></li>
+            <li>fb</li>
+            <li>twitter</li>
+        </ul>
+    </div>
+
+    <div class="creds">
+        <p>
+            
+        </p>
+    </div>
 
     
 
