Modifying Home Page, Adding Nav Bar to all pages

--- a/parallex site/ContactUs.html
+++ b/parallex site/ContactUs.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="contentpages.css">
   <!--link for the ICONS-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" >
+  <link rel="stylesheet" href="ContactUs.css">
   
 </head>
 <body>
@@ -72,5 +73,60 @@
         <!----------------------BLACK NAVBAR ENDS--------------------------->  
           </div>
         <!--wrapper end-->
+
+        <!------------------------CONTACT US-------------------------------->
+
+       <div class="header">
+         <div class="head_text">
+          <p id="heading">We'll Like To Hear From You </p>
+          <br><br>
+          <hr>
+          <br>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam modi doloremque possimus alias provident quasi? Aut, laboriosam eligendi optio quas ratione dolor distinctio reprehenderit, iusto debitis veniam dicta ab id.</p>
+        </div>
+      </div>
+
+       <br>
+
+       <section class="main_col">
+        <div class="fbackground">
+          <div class="fhead"> <h1> Tell Us Your Story</h1></div>
+          <div class="main">
+            <form action="get">
+
+              <h3 class="name">Name</h3>
+              <label class="lab" for="fname">First Name:</label><br>
+              <input class="inp_name" type="text" name="fname" placeholder="Name">
+              <br>
+              <label class="lab" for="lname">Last Name:</label><br>
+              <input class="inp_name" type="text" name="lname" placeholder="Surname">
+              <br><br><br>
+
+              <h3 class="address">Postal Address</h3>
+                <label class="lab" for="add">Address</label><br>
+                <textarea name="add" class="inp_add" cols="15" rows="2" placeholder="Address"></textarea>
+              <br><br><br>
+
+              <h3 class="user_email">Email</h3>
+              <lable class="lab" for="email">Email Address</lable><br>
+              <input type="email" name="email" class="email">
+              <br><br><br>
+
+              <h3 class="msg">Write your Message</h3>
+              <textarea name="message" class="mmsg" cols="20" rows="5" placeholder="Type here"></textarea>
+              
+            </form>
+          </div>
+          </div>
+       </section>
+
+       <aside class="sidebar">
+
+        <h2 class="header_side">You are in good company</h2>
+        <p class="p_side"><div class="1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore quia sit enim ea temporibus. Harum accusantium voluptatem illo nisi numquam. Dolor non quo voluptatibus laborum minima quae beatae molestiae provident.</div></p>
+
+       </aside>
+
+      
 </body>
 </html>
