Content Page Responsiveness, Working of NavBar

--- a/parallex site/TajMahal.html
+++ b/parallex site/TajMahal.html
@@ -72,5 +72,26 @@
         <!----------------------BLACK NAVBAR ENDS--------------------------->  
           </div>
         <!--wrapper end-->
+
+
+
+        <div class="footer">
+          <h2>
+              Beautiful India
+          </h2>
+  
+          <ul class="footerlists">
+              <li><h2> Contact Us</h2></li>
+              <li>Email: </li>
+              <li>Call: </li>
+          </ul>
+  
+          <ul class="footerlists">
+              <li><h2> Socials</h2></li>
+              <li>fb</li>
+              <li>twitter</li>
+          </ul>
+      </div>
+  
 </body>
 </html>
