Adjustments in Responsiveness

--- a/parallex site/AboutUs.html
+++ b/parallex site/AboutUs.html
@@ -36,10 +36,10 @@
                     </div>
                     </li>
                     <!-- "#" will be replaced by Links -->
-                    <li> <a href="#"> HOME </a> </li>
-                    <li> <a href="#"> EXPLORE </a> </li>
-                    <li> <a href="#"> CONTACT US </a> </li>
-                    <li> <a href="#"> ABOUT US </a> </li>
+                    <li> <a href="parallex.html"> HOME </a> </li>
+                    <li> <a href="Explore.html"> EXPLORE </a> </li>
+                    <li> <a href="ContactUs.html"> CONTACT US </a> </li>
+                    <li> <a href="AboutUs.html"> ABOUT US </a> </li>
                     <!-- The cross to close the slide in menu for smaller screens-->
                     <!-- Not visible on larger screens-->
                     <label for="chk" class="hide-menu-button">
