--- a/parallex site/parallex.html
+++ b/parallex site/parallex.html
@@ -14,11 +14,13 @@
             <span class="border">
                 Beautiful india
             </span>
+
             <ul >
-                <li class="nav"> <a href="#">Explore</a></li>
+                <li class="nav"> <a href="Explore.html">Explore</a></li>
                 <li class="nav"><a href="ContactUs.html">Contact Us</a></li>
                 <li class="nav"><a href="AboutUs.html">About Us</a></li>
             </ul>
+
         </div>
     </div>
 
